# Rescue-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.postgres.yml  docker-compose.yml  ml_system_design_doc.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: backfill-e2e-nightly.yml  batch-e2e.yml  cd-stub.yml  cd.yml  ci.yml  deploy.yml  infra-ci.yml  k8s-lint.yml  platform-ci.yml
alembic/: env.py
alembic/versions/: 202603140001_create_operational_tables.py
configs/: artifact_store.example.yaml  nsu_frames_nanodet_alert_contract.yaml  nsu_frames_yolov8n_alert_contract.yaml
db_migrations/: env.py
deploy/airflow/: docker-compose.airflow.yml
deploy/monitoring/: docker-compose.monitoring.yml
docs/: MLIP_CHECKLIST.md  batch_evidence_pack.md  ml_system_design_doc.md  openapi.yaml
docs/adr/: ADR-0001-inference-placement.md  ADR-0002-video-ingestion-rtsp-udp.md  ADR-0003-alerting-contract-and-metrics.md  ADR-0004-Detector choice (YOLOv8n baseline).md  ADR-0004-detector-choice-(YOLOv8n baseline).md  ADR-0005-model-runtime-format.md  ADR-0006-operator-vs-automatic-mode.md  ADR-0007-autonomous-deployment-and-offline-sync.md  ADR-0008-kubernetes-and-secrets.md  ADR-001-online-service-architecture.md  ADR-002-batch-service-architecture.md  README.md
docs/architecture/: batch_contour.md  foundation_for_pending_checklist.md
docs/contracts/: alert_lifecycle.md  mission_input.md  report_schema.md
docs/runbooks/: batch_backfill_idempotency_and_storage.md  batch_demo_playbook.md  batch_operations.md  k3s_field_deploy.md  k8s_local_kind.md  postgres_backend.md  rpi_mtls_setup.md
infra/: .gitignore  README.md  docker-compose.platform.yml  platform.env.example
infra/airflow/: Dockerfile
infra/minio/: create-bucket.sh
infra/offline/: .env.offline.example  README.md  docker-compose.offline.yml
infra/prometheus/: prometheus.yml
libs/batch/: __init__.py
orchestration/: __init__.py
orchestration/airflow/: __init__.py
rescue_ai/: config.py
rescue_ai/application/: alert_policy.py  auto_mission_service.py  auto_session_manager.py  batch_dtos.py  batch_runner.py  frame_source.py  inference_config.py  mission_metrics.py  payloads.py  pilot_service.py  pipeline_stages.py  stream_orchestrator.py
rescue_ai/domain/: alert_policy.py  entities.py  mission_metrics.py  ports.py  value_objects.py
rescue_ai/infrastructure/: annotation_index.py  artifact_storage.py  batch_metrics_repository.py  contract_loader.py  http_detector.py  http_navigation_engine.py  http_publisher.py  local_mission_source.py  memory_repositories.py  offline_first_repositories.py  offline_first_storage.py  pilot_engine.py  postgres_auto_repositories.py  postgres_connection.py  postgres_repositories.py  rpi_client.py  s3_artifact_store.py  s3_mission_source.py  stage_store.py  status_store.py  sync_outbox_repository.py  sync_worker.py  trajectory_plot.py  yolo_detector.py
rescue_ai/interfaces/: __init__.py
rescue_ai/navigation/: __init__.py  altitude.py  constants.py  engine.py  homography.py  marker.py  marker_pose.py  no_marker.py  optical_flow.py  smoothing.py  (+2 more)
scripts/: __init__.py  replay_frames.py
tests/: conftest.py  test_alert_flow.py  test_api_dependencies.py  test_artifact_storage.py  test_auto_mission_api.py  test_auto_mission_service.py  test_auto_run_cli.py  test_auto_session_manager.py  test_auto_session_routes.py  test_batch_detector_runtime.py  test_batch_main.py  test_batch_pilot_engine.py  test_batch_quality_gate.py  test_batch_runner.py  test_batch_smoke.py  test_batch_source.py  test_batch_stores.py  test_cli_video_source_factories.py  test_contract_loader_detector.py  test_deployment_profiles.py  test_deployment_settings.py  test_domain_auto_entities.py  test_ffmpeg_rtsp_source.py  test_frame_source.py  test_health.py  test_helm_charts.py  test_inference_runtime.py  test_init_remote_db.py  test_microservices_split.py  test_nanodet_detector.py  test_navigation_engine.py  test_navigation_golden_regression.py  test_navigation_pure.py  test_online.py  test_online_controller.py  test_online_controller_helpers.py  test_pilot_service.py  test_pipeline_stages.py  test_postgres_connection.py  test_postgres_repositories.py  (+10 more)
(+214 files in other folders)
