[project]
name = "rescue-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "boto3==1.42.65",
  "fastapi==0.115.8",
  "httpx==0.27.2",
  "pydantic>=2,<3",
  "pydantic-settings==2.7.1",
  "uvicorn[standard]==0.30.6",
  "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "httpx==0.27.2",
  "numpy>=1.26,<3",
  "black==24.10.0",
  "flake8==7.1.1",
  "isort==5.13.2",
  "mypy==1.11.2",
  "types-PyYAML==6.0.12.20250915",
  "pylint==3.3.1",
]
inference = [
  "ultralytics==8.3.57",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
]
postgres = [
  "psycopg[binary]==3.2.3",
]
batch = [
  "boto3==1.42.65",
  "psycopg[binary]==3.2.3",
  "pydantic>=2,<3",
  "pydantic-settings==2.7.1",
]
airflow = [
  "apache-airflow==2.9.3",
  "apache-airflow-providers-docker==3.11.0",
  "psycopg2-binary==2.9.10",
  "pydantic>=2,<3",
  "pydantic-settings==2.7.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
files = ["rescue_ai", "tests"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring a running Postgres database",
]

[tool.pylint.main]
py-version = "3.12"
extension-pkg-allow-list = ["cv2"]
generated-members = ["cv2.*"]

[tool.pylint.format]
max-module-lines = 1300

[tool.pylint.design]
max-args = 8
max-positional-arguments = 8
max-locals = 32
max-returns = 8
max-statements = 70

[tool.pylint.basic]
good-names = [
    "i", "j", "k", "x", "y", "z", "n", "m", "h", "w", "c", "p", "t", "s", "f", "_",
    "H", "K", "A", "D", "L", "X", "Hf", "invH",
    "p0", "p1", "cs", "dt", "ef", "eb", "fb",
]
good-names-rgxs = "^[HK]_[a-zA-Z_0-9]+$"

[tool.pylint."messages_control"]
disable = [
    "C0116",  # missing-function-docstring (Protocol/CRUD methods)
    "R0801",  # duplicate-code
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "W0212",  # protected-access (needed in tests)
    "W0621",  # redefined-outer-name (pytest fixtures)
    "C0415",  # import-outside-toplevel (lazy imports)
]
